[project]
name = "sdss-lvmieb"
version = "0.5.4a0"
description = "Control software for the Local Volume Mapper Instrument Electronics Box"
authors = [
    {name = "Changgon Kim", email = "changgonkim@khu.ac.kr"},
    {name = "José Sánchez-Gallego", email = "gallegoj@uw.edu"}
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.10,<4"
keywords = ["astronomy", "software"]

dependencies = [
    "sdsstools>=1.0.0",
    "sdss-clu>=2.0.0",
    "numpy>=1.20.3",
    "sdss-drift>=1.1.0"
]

[project.optional-dependencies]
dev = [
    "ipython>=7.11.0",
    "doc8>=0.8.0",
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "coverage[toml]>=5.0",
    "ipdb>=0.12.3",
    "rstcheck>=3.3.1",
    "Sphinx>=3.0.0",
    "sphinx-click>=2.6.0",
    "sphinx-jsonschema>=1.16.7",
    "myst-parser>=0.14.0",
    "furo>=2021.6.18",
    "nox>=2021.6.12",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.3.3",
    "ruff>=0.0.289"
]

[project.scripts]
lvmieb = "lvmieb.__main__:main"

[project.urls]
Homepage = "https://github.com/sdss/lvmieb"
Repository = "https://github.com/sdss/lvmieb"
Documentation = "https://sdss-lvmieb.readthedocs.org"

[tool.uv.build-backend]
module-name = "lvmieb"
module-root = "src"

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["lvmieb"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu", "drift"]

[tool.pytest.ini_options]
addopts = "--cov lvmieb --cov-report xml --cov-report html --cov-report term"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
include = ["src/lvmieb/*"]
omit = [
    "src/lvmieb/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "if TYPE_CHECKING"
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ty>=0.0.15",
]
